# yaffle

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  docker-build.sh  docker-compose.yaml  in-container-build.sh
.github/workflows/: build.yaml  clippy.yaml
app/: Cargo.toml
app/src/: lib.rs  settings.rs
image/: defaults.auto.pkrvars.hcl  image.pkr.hcl  logging.toml  toshi_config.toml  user-data.yaml.tpl
src/: gelf.rs  main.rs  query.rs  syslog.rs  websrv.rs
src/websrv/: mod.rs
yaffle-macros/: Cargo.toml
yaffle-macros/src/: lib.rs
yaffle-server/: Cargo.toml
yaffle-server/src/: fileserv.rs  gelf.rs  main.rs  query.rs  quickwit.rs  schema.rs  syslog.rs
yaffle-server/src/websrv/: mod.rs  templates.rs
