[package]
name = "yaffle-server"
version = "0.1.0"
authors = ["Hugh Cole-Baker <sigmaris@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "0.5"
chrono = "0.4"
dns-lookup = "1.0"
env_logger = "0.7"
flate2 = "1.0"
futures = "0.3"
futures-batch = "0.6"
horrorshow = "0.8"
hyper = { version = "0.13", features = ["stream"] }
lazy_static = "1.4"
listenfd = "0.3"
log = "0.4"
nom = "6.0.0-alpha1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
tantivy = "0.12"
tokio = { version = "0.2", features = ["macros", "rt-threaded", "udp", "dns", "sync"] }
toshi = { path = "../../Toshi/toshi-client", default-features = false, features = ["hyper_client"] }
warp = "0.2"
