[package]
name = "yaffle-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path = "../app", default-features = false, features = ["ssr"] }
yaffle-macros = { path = "../yaffle-macros" }
leptos = { workspace = true, features = ["ssr"] }
leptos_axum.workspace = true

async-trait.workspace = true
axum.workspace = true
bytes.workspace = true
chrono.workspace = true
clap.workspace = true
cookie.workspace = true
dns-lookup.workspace = true
flate2.workspace = true
futures.workspace = true
futures-batch.workspace = true
http.workspace = true
hyper.workspace = true
lazy_static.workspace = true
listenfd.workspace = true
log.workspace = true
nom.workspace = true
serde.workspace = true
serde_json.workspace = true
simple_logger.workspace = true
tantivy.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower.workspace = true
tower-http.workspace = true
url.workspace = true
